# py-operations-chain

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/operations_chain/: __init__.py  base.py  control_flow.py  exceptions.py  executor.py  operation.py  parser.py  registry.py  side_effects.py  transformations.py  validations.py
tests/: conftest.py  test_edge_cases.py  test_exceptions.py  test_pipeline.py  test_registry.py  test_side_effects.py  test_transformations.py  test_validations.py
