[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "operations-chain"
version = "0.1.0"
description = "A configurable, AI-agent friendly pipeline execution engine for chaining operations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Michalis Gourlis" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["pipeline", "operations", "chain", "transformation", "validation", "workflow"]

dependencies = []

[project.optional-dependencies]
http = ["aiohttp>=3.8"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "pre-commit>=3.5",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/mgourlis/py-operations-chain"
Repository = "https://github.com/mgourlis/py-operations-chain"

[tool.hatch.build.targets.wheel]
packages = ["src/operations_chain"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/operations_chain --cov-report=term-missing"
